--- a/07_02.ipynb
+++ b/07_02.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPgLIXqUhfzxBJ4jDMdxjZB",
+      "authorship_tag": "ABX9TyMQx7qUTq/2K/QZjLs3DJoK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,6 +40,19 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn import linear_model\n",
         "from sklearn.metrics import mean_squared_error"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rIWXgb8-eMi1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#test on how to make a bar graph"
       ],
       "execution_count": 0,
       "outputs": []
