--- a/07_02.ipynb
+++ b/07_02.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMQx7qUTq/2K/QZjLs3DJoK",
+      "authorship_tag": "ABX9TyM+tuB1LnDnPyMg2+ESiMPV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1230,7 +1230,7 @@
       },
       "source": [
         "plt.scatter(x=train[\"GarageArea\"], y=np.log(train.SalePrice), color=\"b\")\n",
-        "plt.xlim(-200, 1600) #we set the limits of the axes\n",
+        "plt.xlim(-200, 1600) #set the limits of the axes\n",
         "plt.ylabel(\"SalePrice\")\n",
         "plt.xlabel(\"GarageArea\")\n",
         "plt.show()"
