--- a/07_02.ipynb
+++ b/07_02.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOTcu/p0jk6b1UVXeGprEfb",
+      "authorship_tag": "ABX9TyPs+yqJc5Ds6S70CN6TDZ7t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,7 +87,7 @@
       "metadata": {
         "id": "SdCtsjG6NStO",
         "colab_type": "code",
-        "outputId": "8066d735-55ea-40ee-c1ce-0927b9e32a53",
+        "outputId": "6be9cb92-5fee-4aa9-9819-f9c925001381",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -98,7 +98,7 @@
         "print (\"train.csv size: \", train.shape)\n",
         "print (\"test.csv size: \", test.shape)"
       ],
-      "execution_count": 350,
+      "execution_count": 446,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +115,7 @@
       "metadata": {
         "id": "axQ060CfNVCV",
         "colab_type": "code",
-        "outputId": "424c6df5-0eb7-4d64-b32e-ec57596dda39",
+        "outputId": "873aab50-a318-4772-8be9-cb952aad7c06",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 253
@@ -125,7 +125,7 @@
         "#print few rows to check if the data has been read correctly as it is in the file\n",
         "train.head()"
       ],
-      "execution_count": 351,
+      "execution_count": 447,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -672,7 +672,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 351
+          "execution_count": 447
         }
       ]
     },
@@ -711,7 +711,7 @@
       "metadata": {
         "id": "bq39iZI6OnYf",
         "colab_type": "code",
-        "outputId": "eca22b43-681f-4ee5-8919-2380b6c243a8",
+        "outputId": "3d9884f6-2c96-47da-bf73-ea6bafe2234f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 296
@@ -729,7 +729,7 @@
         "sns.distplot(a=train.SalePrice, kde=True, kde_kws={\"color\":\"r\", \"alpha\":0.4, \"linewidth\":5, \"shade\":True})\n",
         "plt.show()"
       ],
-      "execution_count": 354,
+      "execution_count": 450,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,7 +770,7 @@
       "metadata": {
         "id": "nUvS8ZlhOqfO",
         "colab_type": "code",
-        "outputId": "bb18998b-7d50-468f-8e7f-82b94fa089ac",
+        "outputId": "1f09adcb-ef82-4a72-ab25-89010429f799",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 296
@@ -787,7 +787,7 @@
         "sns.distplot(a=target, kde=True, kde_kws={\"color\":\"g\", \"alpha\":0.6, \"linewidth\":5, \"shade\":True})\n",
         "plt.show()"
       ],
-      "execution_count": 356,
+      "execution_count": 452,
       "outputs": [
         {
           "output_type": "stream",
@@ -829,7 +829,7 @@
       "metadata": {
         "id": "sfFDD2PiOrj_",
         "colab_type": "code",
-        "outputId": "425f2915-12b9-4a84-bdd8-d9a0cfae797e",
+        "outputId": "390da4d5-d0db-4b7d-9df5-4ec727ae30b2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 680
@@ -839,7 +839,7 @@
         "numeric_features = train.select_dtypes(include=[np.number])\n",
         "numeric_features.dtypes"
       ],
-      "execution_count": 358,
+      "execution_count": 454,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -889,7 +889,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 358
+          "execution_count": 454
         }
       ]
     },
@@ -898,7 +898,7 @@
       "metadata": {
         "id": "CterzoyuOxM_",
         "colab_type": "code",
-        "outputId": "4dc8f6f6-c612-4fe8-bc89-9295aa86f2d1",
+        "outputId": "8e473d39-5f93-4bc1-910c-537b50e731c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
@@ -910,7 +910,7 @@
         "print (corr[\"SalePrice\"].sort_values(ascending=False)[:5], '\\n')\n",
         "print (corr[\"SalePrice\"].sort_values(ascending=False)[-5:])"
       ],
-      "execution_count": 359,
+      "execution_count": 455,
       "outputs": [
         {
           "output_type": "stream",
@@ -951,7 +951,7 @@
       "metadata": {
         "id": "P5WeQBYMO02_",
         "colab_type": "code",
-        "outputId": "e13efefc-74d4-4314-b02e-7ab1f9d85ed7",
+        "outputId": "e133395a-954c-41d6-a9f0-3b4c165f76eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -961,7 +961,7 @@
         "#I start analyse the overall quality by using .unique() to get the unique values of OverallQuall\n",
         "train.OverallQual.unique()"
       ],
-      "execution_count": 361,
+      "execution_count": 457,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -973,7 +973,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 361
+          "execution_count": 457
         }
       ]
     },
@@ -995,7 +995,7 @@
       "metadata": {
         "id": "hrrzqIj2O4IH",
         "colab_type": "code",
-        "outputId": "aa03d5e9-6f05-4dae-d92e-27c1dfb5c38c",
+        "outputId": "71c23fc5-4fbf-4830-e089-11bee0f62f4b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 390
@@ -1005,7 +1005,7 @@
         "quality = train.pivot_table(index=\"OverallQual\", values=\"SalePrice\", aggfunc=np.median)\n",
         "quality"
       ],
-      "execution_count": 363,
+      "execution_count": 459,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1099,7 +1099,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 363
+          "execution_count": 459
         }
       ]
     },
@@ -1108,7 +1108,7 @@
       "metadata": {
         "id": "cf0fO7e_PGNv",
         "colab_type": "code",
-        "outputId": "0781a082-f564-4cb8-c413-185af01c1353",
+        "outputId": "4b0ef377-59d7-42a8-8a38-bb2b309180bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 279
@@ -1121,7 +1121,7 @@
         "plt.xticks(rotation=0)\n",
         "plt.show()"
       ],
-      "execution_count": 364,
+      "execution_count": 460,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1142,7 +1142,7 @@
       "metadata": {
         "id": "sjTZyaM-POeo",
         "colab_type": "code",
-        "outputId": "177b35e7-1895-4f17-d8e4-2960f531676a",
+        "outputId": "60e126a2-3f2b-4fae-bc63-941f08c4c7e2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 279
@@ -1154,7 +1154,7 @@
         "plt.xlabel(\"Garage Area\")\n",
         "plt.show()"
       ],
-      "execution_count": 365,
+      "execution_count": 461,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1188,7 +1188,7 @@
       "metadata": {
         "id": "Pzi1hQ92PTD4",
         "colab_type": "code",
-        "outputId": "9da50360-29db-4939-e2e6-5af685116329",
+        "outputId": "9afe1abc-5a8b-46c0-c610-9f8051944190",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 279
@@ -1201,7 +1201,7 @@
         "plt.xlabel(\"GarageArea\")\n",
         "plt.show()\n"
       ],
-      "execution_count": 367,
+      "execution_count": 463,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1222,7 +1222,7 @@
       "metadata": {
         "id": "J4YNx0fAPWkv",
         "colab_type": "code",
-        "outputId": "0322b4b9-451f-4b2f-e569-7138c1aeeef7",
+        "outputId": "0134e9dd-4048-476e-f8da-1dfac753cdfc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 855
@@ -1234,7 +1234,7 @@
         "nulli.index.name = \"Feature\";\n",
         "nulli"
       ],
-      "execution_count": 368,
+      "execution_count": 464,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1403,7 +1403,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 368
+          "execution_count": 464
         }
       ]
     },
@@ -1412,7 +1412,7 @@
       "metadata": {
         "id": "hu4DTPlvPZeA",
         "colab_type": "code",
-        "outputId": "d8d493de-28d9-4539-ae99-a3b2e29df0f3",
+        "outputId": "80e648a8-9074-4252-f7e1-1c54c8604373",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1421,7 +1421,7 @@
       "source": [
         "print (\"Unique values:\", train.MiscFeature.unique())"
       ],
-      "execution_count": 369,
+      "execution_count": 465,
       "outputs": [
         {
           "output_type": "stream",
@@ -1437,7 +1437,7 @@
       "metadata": {
         "id": "uySlLlbviNOB",
         "colab_type": "code",
-        "outputId": "ab240723-83d4-4cec-813e-ff90a25fa534",
+        "outputId": "c88d3c56-bddb-4485-dc5e-39eeb6391a6f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 248
@@ -1456,7 +1456,7 @@
         "plt.axis('equal')\n",
         "plt.show()"
       ],
-      "execution_count": 370,
+      "execution_count": 466,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1477,7 +1477,7 @@
       "metadata": {
         "id": "xojm_lxVPdWI",
         "colab_type": "code",
-        "outputId": "8037c75e-720e-4e55-edab-b92180efed53",
+        "outputId": "c29316a0-149a-4fe1-d56f-fabf0a5ac66b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 193
@@ -1487,7 +1487,7 @@
         "cat = train.select_dtypes(exclude = [np.number])\n",
         "cat.describe()"
       ],
-      "execution_count": 371,
+      "execution_count": 467,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1758,7 +1758,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 371
+          "execution_count": 467
         }
       ]
     },
@@ -1767,7 +1767,7 @@
       "metadata": {
         "id": "vd0DaIAePgS4",
         "colab_type": "code",
-        "outputId": "18512880-3dee-48b1-f6db-7febaa9af3c9",
+        "outputId": "6868be85-b63b-47dc-d6f3-620f0739f9a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -1777,7 +1777,7 @@
         "print (\"Original: \")\n",
         "print (train.Street.value_counts())"
       ],
-      "execution_count": 372,
+      "execution_count": 468,
       "outputs": [
         {
           "output_type": "stream",
@@ -1810,7 +1810,7 @@
       "metadata": {
         "id": "LrZihC0XPl1Y",
         "colab_type": "code",
-        "outputId": "f5cbf3b2-aa66-484e-a5cc-a415e6f3c6b8",
+        "outputId": "0db70726-755f-4d16-fa14-779d2988165e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -1820,7 +1820,7 @@
         "print (\"Encoded: \")\n",
         "print (train.enc_street.value_counts())"
       ],
-      "execution_count": 374,
+      "execution_count": 470,
       "outputs": [
         {
           "output_type": "stream",
@@ -1839,7 +1839,7 @@
       "metadata": {
         "id": "ESbFHkj0Pn-J",
         "colab_type": "code",
-        "outputId": "647a2442-5535-4dc1-f701-8b0c1813da92",
+        "outputId": "d9162b1d-bedc-46bd-fc85-1a7be66affea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 312
@@ -1853,7 +1853,7 @@
         "plt.xticks(rotation=90)\n",
         "plt.show()"
       ],
-      "execution_count": 375,
+      "execution_count": 471,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1890,7 +1890,7 @@
       "metadata": {
         "id": "BWgvQuJfPtiJ",
         "colab_type": "code",
-        "outputId": "b2504e46-ddb3-4cc6-ca0a-5d9339c9633f",
+        "outputId": "eaa4c241-6469-4d00-da6c-5e83ff26ffbb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 280
@@ -1904,7 +1904,7 @@
         "plt.xticks(rotation=0)\n",
         "plt.show()"
       ],
-      "execution_count": 377,
+      "execution_count": 473,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1938,7 +1938,7 @@
       "metadata": {
         "id": "OkVoLGpwPyQB",
         "colab_type": "code",
-        "outputId": "7f4241a3-5829-4eb1-8159-a5f5399b75ed",
+        "outputId": "77451255-b2d3-4773-bd4f-791cda74ab55",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1947,7 +1947,7 @@
       "source": [
         "sum(data.isnull().sum() != 0)"
       ],
-      "execution_count": 379,
+      "execution_count": 475,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1959,7 +1959,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 379
+          "execution_count": 475
         }
       ]
     },
@@ -2025,7 +2025,7 @@
       "metadata": {
         "id": "CBJ_D142P-vC",
         "colab_type": "code",
-        "outputId": "4fb36c41-6138-4d6c-b607-054ce0a0c2ec",
+        "outputId": "715da898-4543-4112-d1cf-a08885949512",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -2034,7 +2034,7 @@
       "source": [
         "print (\"R^2 is: \", model.score(X_test, y_test))"
       ],
-      "execution_count": 384,
+      "execution_count": 480,
       "outputs": [
         {
           "output_type": "stream",
@@ -2063,7 +2063,7 @@
       "metadata": {
         "id": "srmvEqUzQD1i",
         "colab_type": "code",
-        "outputId": "aa75b57a-fe2a-4c0a-e7a8-5ecff0b87213",
+        "outputId": "e195a651-1290-4c88-e6f0-6830ab922ec8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -2072,7 +2072,7 @@
       "source": [
         "print (\"RMSE is: \", mean_squared_error(y_test, predictions))"
       ],
-      "execution_count": 386,
+      "execution_count": 482,
       "outputs": [
         {
           "output_type": "stream",
@@ -2088,7 +2088,7 @@
       "metadata": {
         "id": "Smr2IaQvQGD4",
         "colab_type": "code",
-        "outputId": "56776626-17a5-4512-c00c-b9c969661c02",
+        "outputId": "5f1bc419-cad2-4460-efdd-a03baf0810d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -2102,7 +2102,7 @@
         "plt.title(\"Linear Regression Model\")\n",
         "plt.show()"
       ],
-      "execution_count": 387,
+      "execution_count": 483,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2123,7 +2123,7 @@
       "metadata": {
         "id": "Zdwusk0bQLND",
         "colab_type": "code",
-        "outputId": "b5be4c6b-ff54-4c5f-c09b-d382a244a5fc",
+        "outputId": "4167b9d0-89d0-447d-8b4d-e1b2c92b50bd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -2146,7 +2146,7 @@
         "    plt.show()\n",
         "  '''"
       ],
-      "execution_count": 388,
+      "execution_count": 484,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2158,7 +2158,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 388
+          "execution_count": 484
         }
       ]
     },
@@ -2179,58 +2179,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Xdh0f51RQU5c",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "feats = test.select_dtypes(include=[np.number]).drop([\"Id\"], axis=1).interpolate()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "QRAVeYIlQWu8",
         "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "predictions = model.predict(feats)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "V30IWekLQYhj",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "final_predictions = np.exp(predictions)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bWeVaCGMQaic",
-        "colab_type": "code",
-        "outputId": "c18f92a0-0191-4296-fcf2-d1431eb5151b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        }
+        },
+        "outputId": "728e791e-5ef7-498c-a517-81af51745413"
       },
       "source": [
+        "feats = test.select_dtypes(include=[np.number]).drop([\"Id\"], axis=1).interpolate()\n",
+        "\n",
+        "predictions = model.predict(feats)\n",
+        "final_predictions = np.exp(predictions)\n",
+        "\n",
         "print (\"Original predictions are: \", predictions[:5], \"\\n\")\n",
         "print (\"Final predictions are: \", final_predictions[:5])"
       ],
-      "execution_count": 393,
+      "execution_count": 486,
       "outputs": [
         {
           "output_type": "stream",
@@ -2249,7 +2215,7 @@
       "metadata": {
         "id": "fxodWtlmQbmz",
         "colab_type": "code",
-        "outputId": "2bc6abcd-1213-4b04-a8a9-20886bc775d7",
+        "outputId": "75c00a0a-4e37-4ccc-ea25-d1756abee95e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -2259,7 +2225,7 @@
         "submission[\"SalePrice\"] = final_predictions\n",
         "submission.head()\n"
       ],
-      "execution_count": 394,
+      "execution_count": 487,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2329,7 +2295,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 394
+          "execution_count": 487
         }
       ]
     },
