--- a/07_02.ipynb
+++ b/07_02.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNA0xcEuoGQcXnfyUhH8Bk7",
+      "authorship_tag": "ABX9TyOAhm5p7O8/b47P1qDJYiUS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
         "import pandas as pd #to read csv files\n",
         "import numpy as np #to make calculations on data\n",
         "import matplotlib.pyplot as plt #we import Matplotlib, a library that allows us to do plotting on the data (and so allows us to visualize the distribution of the data)\n",
-        "import seaborn as sns\n",
+        "import seaborn as sns #for statitical data vizualisation\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn import linear_model\n",
         "from sklearn.metrics import mean_squared_error"
@@ -2017,19 +2017,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FsO-VHmvP3Ky",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "#X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42, test_size=.33)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "RvJywmX9P6eJ",
         "colab_type": "code",
         "colab": {}
@@ -2038,19 +2025,6 @@
         "lr = linear_model.LinearRegression()\n",
         "\n",
         "model = lr.fit(X_train, y_train)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "GAZoMlUaP8qT",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "#model = lr.fit(X_train, y_train)"
       ],
       "execution_count": 0,
       "outputs": []
